# fsnd-capstone

./: .env.example  .gitignore  AUTH0_SETUP.md  COMPLETION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  README_UPDATES.md  SUBMISSION.md  app.py  auth.py  manage.py  models.py  pyproject.toml  requirements.txt  test_app.py
scripts/: coverage.sh  test.sh
